# mdcspc

./: .gitignore  README.md  README_QUICKSTART.md  new_chat_prompt.md  pyproject.toml  requirements.txt  sandbox_icon_table.py
charts/: spc_summary_from_input.csv
config/: spc_phase_config.csv  spc_target_config.csv
config/wizard_test/: metric_config.csv  spc_target_config.csv
docs/: CLI_workflow_gap_summary.md  architecture_guide.md  choosing_the_right_workflow.md  exporter_usage.md  mdcspc_user_workflow.md  packaging_plan.md  quickstart_test_log.md  running_mdcspc.md
scripts/: build_metric_config_from_csv.py  build_summary_icon_table.py  debug_dump_series.py  demo_metric_icons.py  export_spc_from_csv.py  inspect_metric_config.py
tests/: README_tests.md  debug_last_date_check.py  test_assurance_icon_mapping_unit.py  test_cli_explain_config.py  test_cli_init_config.py  test_cli_smoke_export_csv.py  test_cli_smoke_export_sqlite.py  test_cli_wizard.py  test_duplicate_period_validation.py  test_export_dataframe_matches_csv.py  test_export_sqlite_matches_csv.py  test_exporter_phase_mr.py  test_full_flow_from_csv.py  test_golden_assurance_icons.py  test_golden_special_cause.py  test_golden_summary_icons.py  test_infinite_value_validation.py  test_low_data_spc.py  test_missing_group_identifier_warning.py  test_phase_start_validation.py  test_plot_xmr_single_3.py  test_summary_and_icons.py  test_summary_basic.py  test_summary_trend_direction.py  test_variation_icon_mapping_unit.py  test_xmr_multi_basic.py  test_xmr_phase_debug_table.py  test_xmr_phase_minimum.py  test_xmr_phase_single_from_csv.py  test_xmr_single.py  test_xmr_single_1_from_csv.py  test_xmr_single_2_from_csv.py  test_xmr_single_3_from_csv.py  test_xmr_single_4_shift_from_csv.py
(+36 files in other folders)
